external/libsodium: remove
We shipped our own because Ubuntu xenial (16.4) had an ancient one.

Changelog-Changed: Build: libsodium version >= 1.0.4 now required (released 2015-06-11)
Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -40,6 +40,7 @@ jobs:
             bash \
             gettext \
             sqlite3 \
+            libsodium \
             lowdown \
             pkgconf \
             jq \
@@ -60,7 +61,7 @@ jobs:
           git clone https://github.com/lightning/bolts.git ../bolts
           # fatal: unsafe repository ('/Users/runner/work/lightning/lightning' is owned by someone else)
           git config --global --add safe.directory `pwd`
-          for d in libsodium libwally-core gheap jsmn libbacktrace; do git config --global --add safe.directory `pwd`/external/$d; done
+          for d in libwally-core gheap jsmn libbacktrace; do git config --global --add safe.directory `pwd`/external/$d; done
           git submodule update --init --recursive
 
           ./configure CC="$CC" --disable-valgrind
