fixup! ci: Added nightly reprobuild test

--- a/contrib/reprobuild/Dockerfile.focal
+++ b/contrib/reprobuild/Dockerfile.focal
@@ -26,11 +26,9 @@ RUN apt-get update \
 	unzip \
 	wget \
 	git \
-	zip
-
-# Ensure correct ownership
-RUN chown root:root /etc/sudoers
-RUN chown root:root /usr/lib/sudo/sudoers.so
+        zip \
+    && rm -rf /var/cache/apt/archives /var/lib/apt/lists/*.
+RUN echo "ALL ALL=(ALL)       NOPASSWD: ALL" > /etc/sudoers
 
 # Download and install jq from official repository
 RUN wget -O /usr/local/bin/jq https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64 \
