--- a/.github/workflows/repro.yaml
+++ b/.github/workflows/repro.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Build base image
         run: |
@@ -71,7 +73,8 @@ jobs:
 
       - name: Build with jammy
         run: |
-          docker run --rm -v $(pwd):/repo cl-repro-jammy
+          docker run --rm -v $(pwd):/repo cl-repro-jammy bash -c "git clone /repo . && uv sync --all-extras --all-groups && uv run tools/repro-build.sh --force-mtime=2000-01-01 && cp *.xz /repo/release/"
+
 
       - name: Generate checksums
         run: |
@@ -111,7 +114,7 @@ jobs:
 
       - name: Build with jammy
         run: |
-          docker run --rm -v $(pwd):/repo cl-repro-jammy
+          docker run --rm -v $(pwd):/repo cl-repro-jammy bash -c "git clone /repo . && uv sync --all-extras --all-groups && uv run tools/repro-build.sh --force-mtime=2000-01-01 && cp *.xz /repo/release/"
 
       - name: Generate checksums
         run: |
