--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "daemon/jsmn"]
 	path = external/jsmn
 	url = https://github.com/zserge/jsmn
+[submodule "libsodium"]
+       path = external/libsodium
+       url = https://github.com/jedisct1/libsodium.git
 [submodule "external/libbacktrace"]
 	path = external/libbacktrace
 	url = https://github.com/ianlancetaylor/libbacktrace.git
@@ -11,3 +14,7 @@
 [submodule "external/gheap"]
 	path = external/gheap
 	url = https://github.com/valyala/gheap
+[submodule "external/lowdown"]
+       path = external/lowdown
+       url = https://github.com/kristapsdz/lowdown.git
+       ignore = dirty
