--- a/contrib/reprobuild/Dockerfile.focal
+++ b/contrib/reprobuild/Dockerfile.focal
@@ -11,22 +11,32 @@ RUN sed -i '/updates/d' /etc/apt/sources.list && \
     sed -i '/security/d' /etc/apt/sources.list
 
 RUN apt-get update \
-	&& apt-get install -y --no-install-recommends \
-	autoconf \
-	build-essential \
-	ca-certificates \
-	file \
-	gettext \
-	git \
-	libpq-dev \
-	libsodium23 \
-	libtool \
-	m4 \
-	sudo \
-	unzip \
-	wget \
-	git \
-	zip
+    && apt-get install -y --no-install-recommends \
+    autoconf \
+    build-essential \
+    ca-certificates \
+    file \
+    gettext \
+    git \
+    libpq-dev \
+    libsodium23 \
+    libsodium-dev \
+    libtool \
+    m4 \
+    sudo \
+    unzip \
+    wget \
+    zip \
+    && cd /tmp \
+    && wget https://github.com/kristapsdz/lowdown/archive/refs/tags/VERSION_1_0_2.tar.gz \
+    && tar -xzf VERSION_1_0_2.tar.gz \
+    && cd lowdown-VERSION_1_0_2 \
+    && ./configure \
+    && make \
+    && make install \
+    && ldconfig \
+    && cd / \
+    && rm -rf /tmp/VERSION_1_0_2.tar.gz /tmp/lowdown-VERSION_1_0_2
 
 # Ensure correct ownership
 RUN chown root:root /etc/sudoers
