pyln-proto: upgrade coincurve
This upgrade includes https://github.com/ofek/coincurve/pull/188 which
fix an issue with a license file during installation on some systems.

Signed-off-by: Peter Neuroth <pet.v.ne@gmail.com>

--- a/contrib/pyln-proto/pyproject.toml
+++ b/contrib/pyln-proto/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.9.2,<4.0"
 dependencies = [
     "base58>=2.1.1",
     "bitstring>=4.3.0",
-    "coincurve==20.0.0",
+    "coincurve",
     "cryptography>=46",
     "PySocks>=1"
 ]
@@ -27,3 +27,6 @@ packages = ["pyln"]
 [build-system]
 requires = ["hatchling>=1.0.0"]
 build-backend = "hatchling.build"
+
+[tool.uv.sources]
+coincurve = { git = "https://github.com/ofek/coincurve", rev = "435d4a22f6e104712016064bf8373a29593cccd2" }
