--- a/contrib/pyln-testing/pyproject.toml
+++ b/contrib/pyln-testing/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.9,<4.0"
 dependencies = [
   "pytest>=8.0.0",
   "ephemeral-port-reserve>=1.1.4",
-  "psycopg2-binary>=2.9.0",
+  "psycopg[binary]>=3.1",
   "python-bitcoinlib>=0.11.0",
   "jsonschema>=4.4.0",
   "pyln-client>=23",
