--- a/cln-grpc/Cargo.toml
+++ b/cln-grpc/Cargo.toml
@@ -15,7 +15,7 @@ server = ["cln-rpc"]
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
-cln-rpc = { path = "../cln-rpc/", version = "0.5", optional = true }
+cln-rpc = { workspace = true, optional = true }
 cfg-if = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tonic = { version = "0.11", features = ["tls", "transport"] }
