global: replace randombytes_buf() with randbytes() wrapper.
This allows us to override it for deterministic results.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/common/test/Makefile
+++ b/common/test/Makefile
@@ -5,6 +5,7 @@ COMMON_TEST_PROGRAMS := $(COMMON_TEST_OBJS:.o=)
 
 COMMON_TEST_COMMON_OBJS :=				\
 	common/autodata.o				\
+	common/randbytes.o				\
 	common/setup.o					\
 	common/utils.o
 
@@ -119,6 +120,7 @@ common/test/run-trace:					\
 	common/amount.o                                 \
 	common/memleak.o				\
 	common/pseudorand.o				\
+	common/randbytes.o				\
 	common/trace.o					\
 	wire/fromwire.o					\
 	wire/towire.o
