global: use clock_time in place of time_now().
Except for tracing, that sticks with time_now().

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/common/test/Makefile
+++ b/common/test/Makefile
@@ -6,6 +6,7 @@ COMMON_TEST_PROGRAMS := $(COMMON_TEST_OBJS:.o=)
 COMMON_TEST_COMMON_OBJS :=				\
 	common/autodata.o				\
 	common/randbytes.o				\
+	common/clock_time.o				\
 	common/setup.o					\
 	common/utils.o
 
