Python: update pyproject.toml so we can run tests/benchmarks.py.
I had forgotten this file existed, but it needs tqdm and pytest-benchmark, so add those dev
requirements.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dev = [
   "flaky>=3.7.0",
   "requests>=2.32.0",
   "flask-socketio>=5",
+  "tqdm",
+  "pytest-benchmark",
 ]
 
 [project.optional-dependencies]
