doc: include delnetworkevent in generated documentation, and grpc.
Also added missing "added" annotation.  This meant that I had to manually
change contrib/msggen/msggen/patch.py to insert that added notation where it
was missing from .msggen.json.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>
Changelog-None: introduced this release.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -47,6 +47,7 @@ MARKDOWNPAGES := doc/addgossip.7 \
 	doc/deldatastore.7 \
 	doc/delforward.7 \
 	doc/delinvoice.7 \
+	doc/delnetworkevent.7 \
 	doc/delpay.7 \
 	doc/deprecations.7 \
 	doc/dev-forget-channel.7 \
