--- a/plugins/lsps-plugin/Cargo.toml
+++ b/plugins/lsps-plugin/Cargo.toml
@@ -20,6 +20,7 @@ cln-plugin = { workspace = true }
 cln-rpc = { workspace = true }
 hex = "0.4"
 log = "0.4"
+paste = "1.0.15"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
