global: use lightning-hsmtool not hsmtool.
When installed, the name is `lightning-hsmtool`.  We actually copy
`tools/hsmtool` to `tools/lightning-hsmtool` but that's a silly step
which we should get rid of.

So:
1. Make sure our documentation always refers to it as lightning-hsmtool.
2. Make sure our tests invoke it as `lightning-hsmtool`.
3. Rename the C file.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,5 @@
 #! /usr/bin/make
-TOOLS := tools/hsmtool tools/check-bolt
+TOOLS := tools/lightning-hsmtool tools/check-bolt
 TOOLS_SRC := $(TOOLS:=.c)
 TOOLS_OBJ := $(TOOLS_SRC:.c=.o)
 
@@ -15,10 +15,7 @@ tools/headerversions: $(FORCE) tools/headerversions.o libccan.a
 
 tools/headerversions.o: ccan/config.h
 tools/check-bolt: tools/check-bolt.o libcommon.a
-tools/hsmtool: tools/hsmtool.o libcommon.a
-
-tools/lightning-hsmtool: tools/hsmtool
-	cp $< $@
+tools/lightning-hsmtool: tools/lightning-hsmtool.o libcommon.a
 
 clean: tools-clean
 
