tools/lightning-downgrade: tool to downgrade (offline) v25.12 to v25.09.
Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>
Changelog-Added: tools: `lightningd-downgrade` can downgrade your database from v25.12 to v25.09 if something goes wrong.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,5 @@
 #! /usr/bin/make
-TOOLS := tools/lightning-hsmtool
+TOOLS := tools/lightning-hsmtool tools/lightning-downgrade
 TOOLS_SRC := $(TOOLS:=.c)
 TOOLS_OBJ := $(TOOLS_SRC:.c=.o)
 
@@ -13,8 +13,22 @@ ALL_PROGRAMS += $(TOOLS)
 tools/headerversions: $(FORCE) tools/headerversions.o libccan.a
 	@trap "rm -f $@.tmp.$$$$" EXIT; $(LINK.o) tools/headerversions.o libccan.a $(LOADLIBES) $(LDLIBS) -o $@.tmp.$$$$ && mv -f $@.tmp.$$$$ $@
 
+$(TOOLS): libcommon.a
+
 tools/headerversions.o: ccan/config.h
-tools/lightning-hsmtool: tools/lightning-hsmtool.o libcommon.a
+tools/lightning-hsmtool: tools/lightning-hsmtool.o
+tools/lightning-downgrade.o: CFLAGS:=$(CFLAGS) -DCLN_PREV_VERSION=$(CLN_PREV_VERSION)
+
+tools/lightning-downgrade:			\
+	db/exec.o				\
+	db/bindings.o				\
+	db/utils.o				\
+	wallet/migrations.o			\
+	$(DB_OBJS)				\
+	$(WALLET_DB_QUERIES:.c=.o)		\
+	tools/lightning-downgrade.o
+
+update-mocks: $(tools/lightning-downgrade.c:%=update-mocks/%.c)
 
 clean: tools-clean
 
