lightningd-downgrade: downgrade askrene's layer info too.
If they had a channel bias, and ran xpay, it will update the bias
to a v2 bias (with a timestamp).  We must downgrade that, or the
older version won't load!

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -23,7 +23,9 @@ tools/lightning-downgrade:			\
 	db/exec.o				\
 	db/bindings.o				\
 	db/utils.o				\
+	wallet/datastore.o			\
 	wallet/migrations.o			\
+	plugins/askrene/datastore_wire.o	\
 	$(DB_OBJS)				\
 	$(WALLET_DB_QUERIES:.c=.o)		\
 	tools/lightning-downgrade.o
