doc: generate documentation for askrene-bias-node.
I noticed it was missing.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -8,6 +8,7 @@ MARKDOWNPAGES := doc/addgossip.7 \
 	doc/addpsbtoutput.7 \
 	doc/askrene-age.7 \
 	doc/askrene-bias-channel.7 \
+	doc/askrene-bias-node.7 \
 	doc/askrene-create-layer.7 \
 	doc/askrene-remove-layer.7 \
 	doc/askrene-create-channel.7 \
