--- a/contrib/pyln-testing/pyproject.toml
+++ b/contrib/pyln-testing/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 requires-python = ">=3.9,<4.0"
 dependencies = [
   "pytest>=8.0.0",
+  "pytest-xdist>=3.0.0",
+  "pytest-global-fixture",
   "ephemeral-port-reserve>=1.1.4",
   "psycopg2-binary>=2.9.0",
   "python-bitcoinlib>=0.11.0",
