--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ package-mode = false
 [dependency-groups]
 dev = [
   # Test dependencies and inherited dependencies belong here
-  "crc32c>=2.2.post0",              # Belongs to lnprototest
+  "crc32c>=2.2.post0", # Belongs to lnprototest
   "pytest>=8.0.0",
   "pytest-xdist>=3.6.0",
   "pytest-test-groups>=1.2.0",
@@ -33,6 +33,8 @@ dev = [
   "flask-socketio>=5",
   "tqdm",
   "pytest-benchmark",
+  "pyln-testing",
+  "pytest-global-fixture",
 ]
 
 [project.optional-dependencies]
@@ -63,9 +65,9 @@ pyln-client = { workspace = true }
 pyln-proto = { workspace = true }
 pyln-grpc-proto = { workspace = true }
 wss-proxy = { workspace = true }
-pyln-testing = { workspace = true }
 pyln-bolt1 = { workspace = true }
 pyln-bolt2 = { workspace = true }
 pyln-bolt4 = { workspace = true }
 pyln-bolt7 = { workspace = true }
+pyln-testing = { workspace = true }
 pytest-global-fixture = { workspace = true }
